--- a/locale/it/LC_MESSAGES/meerk40t.po
+++ b/locale/it/LC_MESSAGES/meerk40t.po
@@ -9,7 +9,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 23-04-21 06:37UTC\n"
 "PO-Revision-Date: 23-04-21 06:37UTC\n"
-"Last-Translator: betaeta\n"
+"Last-Translator: Betaeta\n"
 "Language: it\n"
 "Language-Team: CicioniItalian\n"
 "Plural-Forms: nplurals=2; plural=n != 1\n"
