Test commit language file

--- a/locale/it/LC_MESSAGES/meerk40t.po
+++ b/locale/it/LC_MESSAGES/meerk40t.po
@@ -11,7 +11,7 @@ msgstr ""
 "PO-Revision-Date: 23-04-21 06:37UTC\n"
 "Last-Translator: Betaeta\n"
 "Language: it\n"
-"Language-Team: CicioniItalian\n"
+"Language-Team: Cicioni-Italian\n"
 "Plural-Forms: nplurals=2; plural=n != 1\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
