Update German tranlslations

--- a/locale/de/LC_MESSAGES/meerk40t.po
+++ b/locale/de/LC_MESSAGES/meerk40t.po
@@ -8424,6 +8424,62 @@ msgstr ""
 msgid "-------"
 msgstr ""
 
+#: meerk40t/gui/wxmscene.py:873
+msgid "Action: clear or set / delete with coordinate"
+msgstr "Aktion: clear bzw set / delete mit Koordinate"
+
+#: meerk40t/gui/wxmscene.py:876
+msgid "Axis (X or Y)"
+msgstr "Achse (X oder Y)"
+
+#: meerk40t/gui/wxmscene.py:878
+msgid "Position for magnetline"
+msgstr "Position für Magnetlinie"
+
+#: meerk40t/gui/wxmscene.py:881
+msgid "magnet <action> <axis> <position>"
+msgstr ""
+
+#: meerk40t/gui/wxmscene.py:895
+msgid "You need to provide the intended action:"
+msgstr "Es muss die gewünschte Aktion angegeben werden:"
+
+#: meerk40t/gui/wxmscene.py:896
+msgid "clear x - clear y : will clear all magnets on the given axis"
+msgstr "clear x - clear y: löscht alle Magnetlinien auf der angegebenen Achse"
+
+#: meerk40t/gui/wxmscene.py:897
+msgid "set x <pos> - set y <pos>: will set a magnet line on the given axis"
+msgstr "set x <pos> - set y <pos>: fügt eine Magnetlinie an der angegebenen Position + Achse hinzu"
+
+#: meerk40t/gui/wxmscene.py:898
+msgid "delete x <pos> - delete y <pos>: will delete the magnet line on the given axis"
+msgstr "delete x <pos> - delete y <pos>: löscht eine Magnetlinie an der angegebenen Position + Achse"
+
+#: meerk40t/gui/wxmscene.py:918
+msgid "You need to provide a position"
+msgstr "Es muss eine Position angegeben werden"
+
+#: meerk40t/gui/wxmscene.py:930
+msgid "Deleted {count} magnet lines on axis {axis}"
+msgstr "Es wurden {count} Magnetlinien auf der {axis}-Achse gelöscht"
+
+#: meerk40t/gui/wxmscene.py:944
+msgid "Magnetline appended at {pos} on axis {axis}"
+msgstr "Magnetlinie hinzugefügt bei {pos} auf der {axis}-Achse"
+
+#: meerk40t/gui/wxmscene.py:946
+msgid "Magnetline was already present"
+msgstr "Magnetlinie war bereits vorhanden"
+
+#: meerk40t/gui/wxmscene.py:960
+msgid "Magnetline removed at {pos} on axis {axis}"
+msgstr "Magnetlinie entfernt bei {pos} auf der {axis}-Achse"
+
+#: meerk40t/gui/wxmscene.py:962
+msgid "Magnetline was not existing"
+msgstr "Magnetlinie existierte nicht"
+
 #: meerk40t/gui/wxmscene.py:341
 msgid ""
 "No color given! Please provide one like 'green', '#RRBBGGAA' (i.e. "
@@ -17623,6 +17679,18 @@ msgstr "Unterdrücke nicht verwendete Operationen"
 #: meerk40t/gui/basicops.py:580
 msgid "Set coolant to on/off or leave unchanged (default)"
 msgstr "Schaltet Kühlung ein/aus"
+
+#: meerk40t/gui/basicops.py:462
+msgid "A: Active = toggle whether the elements assigned to this operation will be burned or not"
+msgstr "A: Aktiv = legt fest, ob Elemente, diesem Arbeitsablauf zugeordnet sind, gebrannt werden oder nicht"
+
+#: meerk40t/gui/basicops.py:469
+msgid "S: Show = if inactive then you can suppress the drawing of the assigned elements"
+msgstr "S: Show = falls der Arbeitsablauf inaktiv ist, kann die Anzeige der zugeordneten Elemente unterdrückt werden"
+
+#: meerk40t/gui/basicops.py:476
+msgid "C: Coolant= determines whether coolant remains / will be turned on / turned off at start of this operation"
+msgstr "C: Kühlung = soll Kühlung zu Beginn dieses Arbeitsablaufs unverändert bleiben / eingeschaltet / ausgeschaltet werden"
 
 #: meerk40t/camera/gui/camerapanel.py:1146 meerk40t/core/elements/element_treeops.py:896 meerk40t/core/elements/element_treeops.py:1042 meerk40t/core/elements/element_treeops.py:1054 meerk40t/gui/spoolerpanel.py:586
 msgid "Do you really want to delete all entries?"
